--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,1 +1,2 @@
-<manifest package="com.morbit.photogallery"></manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+</manifest>
